--- a/FicherosTFG/01Planteamiento.tex
+++ b/FicherosTFG/01Planteamiento.tex
@@ -45,7 +45,7 @@ Para poder hacer de manera adecuada el análisis de la energía necesitaremos prim
 	$$||f||_D= \sqrt{\left< f,f\right>_D}.$$
 \end{definicion}
 
-Para nuestro problema especifico ambas funciones tendrán más de una componente. Suponiendo que, tal y como en el capítulo anterior, tenemos funciones del tipo $u(x,t)$, esto quedaría:
+Para nuestro problema especifico ambas funciones tendrán más de una componente. Suponiendo que, tenemos funciones del tipo $u(x,t)$, esto quedaría:
 
 $$\langle u_1,u_2\rangle_D(t)= \int_{D}u_1(x,t)u_2(x,t)dx, \ \ \ \ \ ||u||_D(t)= \sqrt{\left< u(x,t),u(x,t)\right>_D}.\\
 $$
