--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -9,15 +9,15 @@ publisher = {Wiley Publishing},
 abstract = {Digital sound synthesis has long been approached using standard digital filtering techniques. Newer synthesis strategies, however, make use of physical descriptions of musical instruments, and allow for much more realistic and complex sound production and thereby synthesis becomes a problem of simulation. This book has a special focus on time domain finite difference methods presented within an audio framework. It covers time series and difference operators, and basic tools for the construction and analysis of finite difference schemes, including frequency-domain and energy-based methods, with special attention paid to problems inherent to sound synthesis. Various basic lumped systems and excitation mechanisms are covered, followed by a look at the 1D wave equation, linear bar and string vibration, acoustic tube modelling, and linear membrane and plate vibration. Various advanced topics, such as the nonlinear vibration of strings and plates, are given an elaborate treatment. Key features: Includes a historical overview of digital sound synthesis techniques, highlighting the links between the various physical modelling methodologies. A pedagogical presentation containing over 150 problems and programming exercises, and numerous figures and diagrams, and code fragments in the MATLAB programming language helps the reader with limited experience of numerical methods reach an understanding of this subject. Offers a complete treatment of all of the major families of musical instruments, including certain audio effects. Numerical Sound Synthesis is suitable for audio and software engineers, and researchers in digital audio, sound synthesis and more general musical acoustics. Graduate students in electrical engineering, mechanical engineering or computer science, working on the more technical side of digital audio and sound synthesis, will also find this book of interest.}
 }
 
-@BOOK{quarteroni2010numerical,
-  title={Numerical Models for Differential Problems},
-  author={Quarteroni, A.},
-  isbn={9788847010710},
-  lccn={2009922766},
-  series={MS\&A},
-  url={https://books.google.es/books?id=0gCRhwrnEO4C},
-  year={2010},
-  publisher={Springer Milan}
+@book{Software,
+author={Nakamura,Shoichiro},
+year={1992},
+title={Métodos numéricos aplicados con software},
+publisher={Prentice-Hall Hispanoamericana},
+address={México [etc.]},
+keywords={Análisis numérico; Proceso de datos},ç
+isbn={9688802255;9789688802250;},
+language={Spanish},
 }
 
 @inproceedings{Carreo2012AcercaDA,
@@ -25,6 +25,14 @@ abstract = {Digital sound synthesis has long been approached using standard digi
   author={Juan Carlos Solares Carre{\~n}o and Rosalba Mendoza Su{\'a}res},
   year={2012}
 }
+
+@inproceedings{MartinDomingo,
+  title={Apuntes de vibraciones y ondas},
+  author={Agust{\'i}n} Mart{\'i}n Domingo,
+  year={2020},
+  url={http://oa.upm.es/63585/}
+}
+
 
 @book{vankka2005digital,
   title={Digital Synthesizers and Transmitters for Software Radio},
@@ -62,7 +70,6 @@ journal = {Partial Differential Equations and Solitary Waves Theory. Series: Non
 doi = {10.1007/978-3-642-00251-9}
 }
 
-
 @book{AnIntroduction,
 author={Morton,K. W. and Mayers,D. F. and Mayers,D. F.},
 year={2005},
@@ -74,6 +81,25 @@ abstract={This is the second edition of a highly successful and well-respected t
 keywords={Ecuaciones diferenciales; Ecuaciones en derivadas parciales; Matemáticas; Soluciones numéricas},
 isbn={9780521607933;0521607930;},
 language={English},
+}
+
+@book{royden2010real,
+  title={Real Analysis},
+  author={Royden, H.L. and Fitzpatrick, P.},
+  isbn={9780131437470},
+  lccn={2009048692},
+  url={https://books.google.es/books?id=0Y5fAAAACAAJ},
+  year={2010},
+  publisher={Prentice Hall}
+}
+
+@book{smith1988analisis,
+  title={An{\'a}lisis num{\'e}rico},
+  author={Smith, W.A. and Bernabe, F.J.S.},
+  isbn={9789688801192},
+  url={https://books.google.es/books?id=p7Z1QgAACAAJ},
+  year={1988},
+  publisher={Prentice Hall}
 }
 
 
@@ -97,6 +123,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S0021999184710059},
 author = {Bo Strand},
 abstract = {Finite difference approximations for d/dx which satisfy a summation by parts rule, have been evaluated, using different types of norms, H, by implementation in the symbolic language Maple. In the simpler diagonal norm, H = diag(λK;0, λ1, ..., λ2τ - 1, 1, ...) with all λi positive, difference operators accurate of order τ⩽4 at the boundary and accurate of order 2τ in the interior have been evaluated. However, it was found that the difference operators form multi-parameter families of difference operators when τ⩾3. In the general full norm, H = diag(H̃, I), with H̃ ∈ Rτ + 1 × τ + 1 being SPD, and I the identity matrix, difference operators accurate or order τ = 3, 5 at the boundary and accurate of order τ + 1 in the interior have been computed. As in the diagonal norm case we obtain a multiparameter family of operators when τ⩾3. Finally, a three-parameter family of difference approximations with accuracy three at and near the boundary and with accuracy four in the interior have been computed using restricted full norms. Here, H = diag(H̃ I), with H̃ ∈ Rτ + 2 × τ + 2 being SPD, and H̃ (:, 1) = H̃ (1, :)τ = Ke1 , where K is a constant e1 is the vector with the first element being one and the rest zero. Regardless of which norm we use, the parameters can be determined such that the bandwidth of the difference operators are minimized. This is of interest when parallel computers are used, since the bandwidth determines the memory requirement and also the amount of computational work.}
 }
+
 
 @article{Russell,
 author = {Russell, David L.},
@@ -130,40 +157,9 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898717938}
 }
 
 
-@book{royden2010real,
-  title={Real Analysis},
-  author={Royden, H.L. and Fitzpatrick, P.},
-  isbn={9780131437470},
-  lccn={2009048692},
-  url={https://books.google.es/books?id=0Y5fAAAACAAJ},
-  year={2010},
-  publisher={Prentice Hall}
-}
-
-@book{Software
-author={Nakamura,Shoichiro},
-year={1992},
-title={Métodos numéricos aplicados con software},
-publisher={Prentice-Hall Hispanoamericana},
-address={México [etc.]},
-keywords={Análisis numérico; Proceso de datos},ç
-isbn={9688802255;9789688802250;},
-language={Spanish},
-}
-
-
-@book{smith1988analisis,
-  title={An{\'a}lisis num{\'e}rico},
-  author={Smith, W.A. and Bernabe, F.J.S.},
-  isbn={9789688801192},
-  url={https://books.google.es/books?id=p7Z1QgAACAAJ},
-  year={1988},
-  publisher={Prentice Hall}
-}
-
 
 @book{Stig,
-author={Larsson,Stig and Thomée,Vidar},
+author={Larsson,Stig and Thom{\'e}e,Vidar},
 year={2009},
 title={Partial differential equations with numerical methods},
 publisher={Springer},
